fidoconfig 0.91
---------------

----- cvs ci ------
Wed May 17 18:39:00 UTC 2000
sms:
* fixed double deallocation of viaStr in new routing code

----- cvs ci ------
Wed May 17 21:40:28 NOVST 2000
max (patch from Alex Bronin):
* added token busyFileDir for htick
* added -sendorig option to filearea

----- cvs ci ------
Wed May 15 07:39:00 UTC 2000
sms:
* using direxist() from smapi instead of readdir in parsePath()

----- cvs ci ------
Tue May 16 20:28:45 NOVST 2000
max:
* fix route parsing in the middle of the links

----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Sun May  7 14:55:32 MSD 2000
max (patch from Serguei Revtov):
* add tossingExt token

----- cvs ci ------
Tue Apr 25 19:04:15 NOVST 2000
max:
* backward compatibility for my last changes

----- cvs ci ------
Mon Apr 24 16:35:03 NOVST 2000
max:
* small fix in e_writeCheck
* now possible create two links with the same aka and
  different our aka and link them to different areas.
  if own useAka of area and ourAka used for link not
  the same -- there is no export & import...

----- cvs ci ------
Sun Apr 23 22:12:26 NOVST 2000
max:
* changes with e_readCheck & e_writeCheck (fixed optgrp operations)

----- cvs ci ------
Sat Apr 21 2:44:00 MSK 2000
Nestyurkin Nikolay:
* bugfix of previous fix (int->uint)

----- cvs ci ------
Wed Apr 19 16:52:16 MSD 2000
max (patch from Serguei Revtov):
* unifying some boolean tokens parsing

----- cvs ci ------
Sat Apr 15 14:16:00 MSK 2000
nn:
* disableTID small fix

----- cvs ci ------
Sat Apr 15 10:47:38 NOVST 2000
max:
* add disableTID token

----- cvs ci ------
Sun Apr 10 16:40:00 CET 2000
sms:
* some changes to fidoconfig.h and affected files needed to automatically
  convert fidoconfig.h to fidoconf.pas with h2pas

----- cvs ci ------
Sun Apr  9 22:41:43 NOVST 2000
max:
* add e_readCheck & e_writeCheck
* now export, import & mandatory dispayed by tparser correctly

----- cvs ci ------