@@ -2,6 +2,12 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Mon May 22 11:40:00 NOVST 2000
+max:
+* autoPause added to docs
+* uppercase area's group for Golded (patch from Alex Bronin)
+
+----- cvs ci ------
 Wed May 17 18:39:00 UTC 2000
 sms:
 * fixed double deallocation of viaStr in new routing code
